--- a/public/userdash/css/style.css
+++ b/public/userdash/css/style.css
@@ -2891,17 +2891,21 @@ option {
 }
 
 .cross {
-	font-size: 1.25rem;
-	color: red;
-	width: 20px;
-	aspect-ratio: 1 / 1;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	border-radius: 100px;
+    font-size: 1.25rem;
+    color: red;
+    width: 20px;
+    aspect-ratio: 1 / 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 100px;
 }
 
 .cross:hover {
-	background: #0000000f;
-	color: red;
+    background: #0000000f;
+    color: red;
+}
+
+.main-form textarea {
+    height: auto !important;
 }
