--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -227,11 +227,13 @@ i.bx {
     display: flex;
     gap: 25px;
     align-items: center;
+    justify-content: flex-end;
+    width: 100%;
 }
 
 .header-nav > ul > li > a {
     font-size: 14px;
-    font-weight: 400;
+    font-weight: 600;
     color: var(--color-secondary);
     font-family: var(--secondary-font);
     transition: all 300ms ease-in-out;
@@ -520,7 +522,7 @@ i.bx {
 }
 
 .boxs-content {
-    display: flex;
+    /* display: flex; */
     align-items: center;
     justify-content: center;
     flex-direction: column;
@@ -529,7 +531,7 @@ i.bx {
 .box-header {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     gap: 26px;
 }
 
@@ -1010,13 +1012,13 @@ ul.footer-icons i:hover {
 
 .person-img {
     width: 50px;
-    height: 50px;
+    aspect-ratio: 1/1;
     border-radius: 100%;
     overflow: hidden;
 }
 
 .review-person .name {
-    font-size: 18px;
+    font-size: 15px;
     font-weight: 500;
 }
 
@@ -1026,14 +1028,32 @@ ul.footer-icons i:hover {
 }
 
 .review-person .title {
-    font-size: 14px;
+    font-size: 13px;
+}
+.review-person {
+    flex: 1;
 }
 
 .review-content .review {
-    font-size: 16px;
+    font-size: 13px;
     font-weight: 300;
-    line-height: 1.39;
+    line-height: 1.75;
     font-family: var(--secondary-font);
+    height: 120px;
+    overflow-y: auto;
+    padding-right: 0.25rem;
+}
+.review-content .review::-webkit-scrollbar {
+    width: 7px;
+}
+.review-content .review::-webkit-scrollbar-track {
+    background: #f1f1f1;
+    border-radius: 100px;
+}
+
+.review-content .review::-webkit-scrollbar-thumb {
+    background: var(--color-primary);
+    border-radius: 100px;
 }
 
 .quotation img {
@@ -1042,7 +1062,6 @@ ul.footer-icons i:hover {
 }
 
 .quotation {
-    margin-left: 4rem;
     width: 35px;
     height: 35px;
 }
@@ -1373,7 +1392,7 @@ body .contact-heading * {
 .page-title {
     width: 100%;
     height: 100%;
-    min-height: 45vh;
+    min-height: 30vh;
     position: relative;
     display: flex;
     align-items: center;
@@ -1460,12 +1479,11 @@ body .contact-heading * {
 
 .auth__form .inputField .icon {
     position: absolute;
-    right: 15px;
+    right: 21px;
     top: 50%;
     transform: translateY(-50%);
     line-height: 1;
-    color: #717171;
-    font-size: 1.25rem;
+    font-size: 1.21rem;
 }
 
 .auth__form .inputField .title {
@@ -2501,4 +2519,14 @@ li.page-item.active span.page-link {
 .spinner-border {
     width: 1.5rem;
     height: 1.5rem;
+}
+
+.drs-slider--reverse {
+    text-align: left;
+}
+.header-main .wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    gap: 2rem;
 }
