--- a/public/userdash/css/style.css
+++ b/public/userdash/css/style.css
@@ -2797,7 +2797,7 @@ a.ui-button:active {
     color: #000;
     font-weight: 600;
     padding: 0.75rem 1rem;
-    border-bottom: 1px solid #ccc;
+    /* border-bottom: 1px solid #ccc; */
     display: flex;
     align-items: center;
     gap: 0.5rem;
