--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -633,6 +633,7 @@ i.bx {
     height: 305px;
     overflow: hidden;
     border-radius: 4px;
+    background-color: #fff;
 }
 
 .top-doc__content {
@@ -1089,6 +1090,7 @@ ul.footer-icons i:hover {
     transition: border 0.4s ease, background-color 0.4s ease;
     position: relative;
     z-index: 2;
+    height: 252px;
 }
 
 .review-box:hover {
@@ -2530,3 +2532,135 @@ li.page-item.active span.page-link {
     justify-content: flex-end;
     gap: 2rem;
 }
+.sideBar {
+    position: fixed;
+    overflow-y: auto;
+    top: 0px;
+    background: #fff;
+    padding: 3rem 0 4rem;
+    transform: translateX(-100%);
+    height: 101vh;
+    z-index: 100;
+    width: 310px;
+    box-shadow: rgba(0, 0, 0, 0.125) 0px 0px 20px 5px;
+    transition: all 0.5s ease 0s;
+    color: #000;
+    z-index: 1000;
+  }
+  
+  .sideBar::-webkit-scrollbar {
+    width: 8px;
+  }
+  
+  .sideBar::-webkit-scrollbar-track {
+    background: #e7e3e3d4;
+    border-radius: 100px;
+  }
+  
+  .sideBar::-webkit-scrollbar-thumb {
+    border-radius: 100px;
+    background: var(--color-primary);
+    opacity: 0.25;
+  }
+  
+  .sideBar.show {
+    transform: translateX(0px);
+    display: block;
+  }
+  
+  .sideBar__close {
+    position: absolute;
+    top: 0px;
+    font-size: 1.5rem;
+    background: var(--color-primary);
+    width: 35px;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    right: 0px;
+    color: rgb(255, 255, 255) !important;
+    aspect-ratio: 1/1;
+  }
+  
+  
+  .sideBar__logo {
+    width: 226px;
+    display: block;
+    margin: 0 29px;
+  }
+  
+  .sideBar__logo img {
+    width: 100%;
+    object-fit: cover;
+  }
+  
+  :is(.sideBar__nav > li > a:not(.themeBtn)) {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  
+  .sideBar__nav {
+    margin: 1rem 0 0;
+  
+  }
+  
+  .sideBar__nav>li>a {
+    color: #000;
+    font-size: 14px;
+    font-weight: 600;
+    text-transform: capitalize;
+    gap: 0.5rem;
+    width: 100%;
+    padding: 0.75rem 2rem;
+  }
+  
+  .sideBar__nav>li>a i {
+    font-size: 1.25rem;
+    pointer-events: none;
+  }
+  
+  .sideBar__nav li {
+    width: 100%;
+    border-bottom: 1px solid #cccccc3b;
+  }
+  
+  .drop-down.drop-down--alt {
+    opacity: 1;
+    visibility: visible;
+    transform: scale(1);
+    position: static;
+    width: 100%;
+    background: #fff;
+    overflow: hidden;
+  }
+  
+  .drop-down--toggle {
+    position: relative;
+  }
+  
+  .drop-down.drop-down--alt .drop-down__list>li>a {
+    color: #000;
+    padding: 0.75rem 2rem;
+    /* border-bottom: 1px solid #000; */
+  }
+  
+  .drop-down.drop-down--alt .drop-down__list>li:last-child a {
+    border-bottom: none;
+  }
+  
+  .toggle-wrapper {
+    display: grid;
+    grid-template-rows: 0fr;
+    transition: all 300ms ease;
+  }
+  
+  .toggle-wrapper.open {
+    grid-template-rows: 1fr;
+  }
+  /* /.header-main__menu */
+  .header-main__menu {
+    font-size: 2.2rem;
+    display: none;
+    color: #000;
+  }
