--- a/public/admin/css/style.css
+++ b/public/admin/css/style.css
@@ -1054,7 +1054,7 @@ footer p {
 
 .main-form .form-group select {
     padding: 0 20px;
-    height: 50px !important;
+    height: 43px !important;
     text-transform: capitalize;
     width: 100%;
 }
@@ -2163,3 +2163,62 @@ li.heading {}
     border-radius: 0.25rem;
     font-size: 1rem;
 }
+/* placeholder */
+.placeholder-user {
+    display: flex;
+    align-items: center;
+    gap: 0.75rem;
+    flex-direction: column;
+    margin: 0.5rem auto 1.5rem;
+    text-align: center;
+    width: fit-content;
+}
+
+.placeholder-user__img {
+    aspect-ratio: 1 / 1;
+    border-radius: 100%;
+    cursor: pointer;
+    width: 150px;
+    overflow: hidden;
+    box-shadow: 0 0 15px 1px #00000020;
+    background: #DDDEE0;
+    position: relative;
+}
+
+.placeholder-user__img > img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    object-position: center;
+}
+
+.placeholder-user__img::after {
+    content: "\ed0c";
+    font-family: boxicons !important;
+    background: #00000047;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    font-size: 2.25rem;
+    position: absolute;
+    inset: 0;
+    transition: all 300ms;
+    pointer-events: none;
+    opacity: 0;
+    visibility: hidden;
+    z-index: 11111;
+}
+
+.placeholder-user__img:hover::after {
+    opacity: 1;
+    visibility: visible;
+}
+
+.placeholder-user__name {
+    font-size: 1.25rem;
+    font-weight: 600;
+    text-transform: capitalize;
+    line-height: 1;
+}
+/* placeholder */
