--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -451,10 +451,10 @@ i.bx {
 
 /* .about-us */
 .about-us {
-    padding: 14rem 0 3rem;
+    padding: 12rem 0 3rem;
     background-color: var(--color-secondary);
     position: relative;
-    top: -9rem;
+    top: -5rem;
     isolation: isolate;
     z-index: 0;
 }
@@ -476,8 +476,8 @@ i.bx {
 
 /* .why-cme */
 .why-cme {
-    padding: 0 0 1rem;
-    margin-top: -4rem;
+    padding: 0 0 4rem;
+    /* margin-top: -4rem; */
 }
 
 .why-cme__content {
@@ -491,21 +491,18 @@ i.bx {
 .why-cme__img img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
 }
 .why-accre p {
     padding: 0;
     font-size: 0.95rem;
 }
 .why-cme__img {
-    height: 566px;
     position: relative;
-    z-index: -1;
-    width: 644px;
-    right: 104px;
-    top: -54px;
+    isolation: isolate;
+    width: fit-content;
+    margin: auto;
+    display: block;
 }
-
 .yellow-shape img {
     width: 100%;
     height: 100%;
@@ -767,7 +764,6 @@ ul.footer-icons i:hover {
 .footer-copyright {
     padding: 1.25rem 0;
     text-align: center;
-    border-top: 0.1rem solid #ffffff73;
     color: #fff;
     font-size: 12px;
     font-weight: 500;
@@ -1139,7 +1135,7 @@ li.why-accre__list,
 
 li.why-accre__list::before,
 .why-accre__pra > div::before {
-    content: '•';
+    content: "•";
     position: absolute;
     left: -28px;
     top: -11px;
@@ -1155,7 +1151,7 @@ li.why-accre__list::before,
     color: #000 !important;
 }
 
-.why-accre__img :first-child {
+.why-accre__img .round-img {
     height: 390px;
     overflow: hidden;
     border-top-left-radius: 240px;
@@ -1168,10 +1164,9 @@ li.why-accre__list::before,
     height: 100%;
     object-fit: cover;
     position: relative;
-    margin-left: 2rem;
 }
 
-.why-accre__img :last-child {
+.why-accre__img .circle-img {
     position: absolute;
     width: 220px;
     height: 220px;
@@ -1307,7 +1302,7 @@ body .contact-heading * {
 }
 
 .contact-content {
-    padding: 4.75rem 1.85rem;
+    padding: 1.75rem 1.85rem;
     background-color: var(--color-secondary);
     color: #fff;
     box-shadow: 0px 10px 39.2px 0 rgb(0 0 0 / 30%);
@@ -1316,15 +1311,17 @@ body .contact-heading * {
 .contact-info {
     width: 326px;
     position: absolute;
-    top: 58px;
+    top: 50%;
     z-index: 1;
     left: 8px;
+    transform: translateY(-50%);
 }
 
 .contact-form {
     position: relative;
-    top: 142px;
+    /* top: 142px; */
     z-index: 30;
+    padding: 7rem 0;
 }
 
 .msg-form {
@@ -1373,7 +1370,7 @@ body .contact-heading * {
     filter: brightness(10.5);
     z-index: -1;
     width: 100%;
-    top: 0;
+    inset: 0;
 }
 
 .group3-img img {
@@ -2348,7 +2345,7 @@ p.dot.title {
     color: #fff;
 }
 .profile-content__badge {
-    width: 23px;
+    width: 31px;
 }
 .details-wrapper {
     position: sticky;
@@ -2404,12 +2401,13 @@ li.page-item.active span.page-link {
     overflow: hidden;
     box-shadow: 0 0 15px 1px #00000020;
     position: relative;
+    background: #DDDEE0;
 }
 
 .placeholder-user__img > img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
     object-position: center;
 }
 
@@ -2543,29 +2541,29 @@ li.page-item.active span.page-link {
     transition: all 0.5s ease 0s;
     color: #000;
     z-index: 1000;
-  }
-  
-  .sideBar::-webkit-scrollbar {
+}
+
+.sideBar::-webkit-scrollbar {
     width: 8px;
-  }
-  
-  .sideBar::-webkit-scrollbar-track {
+}
+
+.sideBar::-webkit-scrollbar-track {
     background: #e7e3e3d4;
     border-radius: 100px;
-  }
-  
-  .sideBar::-webkit-scrollbar-thumb {
+}
+
+.sideBar::-webkit-scrollbar-thumb {
     border-radius: 100px;
     background: var(--color-primary);
     opacity: 0.25;
-  }
-  
-  .sideBar.show {
+}
+
+.sideBar.show {
     transform: translateX(0px);
     display: block;
-  }
-  
-  .sideBar__close {
+}
+
+.sideBar__close {
     position: absolute;
     top: 0px;
     font-size: 1.5rem;
@@ -2577,32 +2575,30 @@ li.page-item.active span.page-link {
     right: 0px;
     color: rgb(255, 255, 255) !important;
     aspect-ratio: 1/1;
-  }
-  
-  
-  .sideBar__logo {
+}
+
+.sideBar__logo {
     width: 226px;
     display: block;
     margin: 0 29px;
-  }
-  
-  .sideBar__logo img {
+}
+
+.sideBar__logo img {
     width: 100%;
     object-fit: cover;
-  }
-  
-  :is(.sideBar__nav > li > a:not(.themeBtn)) {
+}
+
+:is(.sideBar__nav > li > a:not(.themeBtn)) {
     display: flex;
     align-items: center;
     justify-content: space-between;
-  }
-  
-  .sideBar__nav {
+}
+
+.sideBar__nav {
     margin: 1rem 0 0;
-  
-  }
-  
-  .sideBar__nav>li>a {
+}
+
+.sideBar__nav > li > a {
     color: #000;
     font-size: 14px;
     font-weight: 600;
@@ -2610,18 +2606,18 @@ li.page-item.active span.page-link {
     gap: 0.5rem;
     width: 100%;
     padding: 0.75rem 2rem;
-  }
-  
-  .sideBar__nav>li>a i {
+}
+
+.sideBar__nav > li > a i {
     font-size: 1.25rem;
     pointer-events: none;
-  }
-  
-  .sideBar__nav li {
+}
+
+.sideBar__nav li {
     width: 100%;
-  }
-  
-  .drop-down.drop-down--alt {
+}
+
+.drop-down.drop-down--alt {
     opacity: 1;
     visibility: visible;
     transform: scale(1);
@@ -2629,94 +2625,158 @@ li.page-item.active span.page-link {
     width: 100%;
     background: #fff;
     overflow: hidden;
-  }
-  
-  .drop-down--toggle {
+}
+
+.drop-down--toggle {
     position: relative;
-  }
-  
-  .drop-down.drop-down--alt .drop-down__list>li>a {
+}
+
+.drop-down.drop-down--alt .drop-down__list > li > a {
     color: #000;
     padding: 0.75rem 2rem;
     /* border-bottom: 1px solid #000; */
-  }
-  
-  .drop-down.drop-down--alt .drop-down__list>li:last-child a {
+}
+
+.drop-down.drop-down--alt .drop-down__list > li:last-child a {
     border-bottom: none;
-  }
-  
-  .toggle-wrapper {
+}
+
+.toggle-wrapper {
     display: grid;
     grid-template-rows: 0fr;
     transition: all 300ms ease;
-  }
-  
-  .toggle-wrapper.open {
+}
+
+.toggle-wrapper.open {
     grid-template-rows: 1fr;
-  }
-  /* /.header-main__menu */
-  .header-main__menu {
+}
+/* /.header-main__menu */
+.header-main__menu {
     font-size: 2.2rem;
     display: none;
     color: #000;
-  }
-  
+}
+
 .slick-prev::before,
 .slick-next::before {
-  color: #000;
-  opacity: 1;
-  font-size: 1.75rem;
-  font-family: boxicons !important;
-  transition: all 300ms ease-in-out;
+    color: #000;
+    opacity: 1;
+    font-size: 1.75rem;
+    font-family: boxicons !important;
+    transition: all 300ms ease-in-out;
 }
 
 .slick-arrow {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  background: none;
-  transition: all 300ms ease-in-out;
-  z-index: 1;
-  opacity: 1 !important;
-  margin: 0 14px 0 26px;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background: none;
+    transition: all 300ms ease-in-out;
+    z-index: 1;
+    opacity: 1 !important;
+    margin: 0 14px 0 26px;
 }
 
 .slick-arrow::before {
-  color: #000;
-  font-size: 1.75rem;
-  position: absolute;
-  background: #fff;
-  border-radius: 100%;
-  width: 35px;
-  height: 35px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  opacity: 1 !important;
-  box-shadow: 0 3px 15px rgba(0, 0, 0, .15);
-  left: 8px;
-  top: -5px;
+    color: #000;
+    font-size: 1.75rem;
+    position: absolute;
+    background: #fff;
+    border-radius: 100%;
+    width: 35px;
+    height: 35px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 1 !important;
+    box-shadow: 0 3px 15px rgba(0, 0, 0, 0.15);
+    left: 8px;
+    top: -5px;
 }
 
 .slick-next {
-  right: 0rem;
+    right: 0rem;
 }
 
 .slick-prev {
-  left: -1.25rem;
+    left: -1.25rem;
 }
 
 .slick-next::before {
-  content: "\ea50";
+    content: "\ea50";
 }
 
 .slick-prev::before {
-  content: "\ea4d";
+    content: "\ea4d";
 }
 
 .slick-arrow:hover::before {
-  color: #777777;
+    color: #777777;
 }
 .top-doc .slick-slide {
     margin: 0 !important;
 }
+.tri-img {
+    clip-path: polygon(25% 0, 100% 0%, 100% 100%, 0% 100%);
+    /* border: 2px solid; */
+}
+.why-cme__img::after {
+    content: "";
+    background-image: url(../images/computerInner.png);
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+.comInner-img {
+    position: absolute;
+    right: 6.5%;
+    z-index: 1;
+    width: 75.5% !important;
+    height: 56% !important;
+    top: 7%;
+    clip-path: polygon(-5% 1%, 93% 24%, 100% 100%, 0% 97%);
+}
+body,
+html {
+    overflow-x: hidden;
+}
+.full-section {
+    min-height: 85vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+/* statistics */
+.statistics {
+    position: relative;
+    top: -1rem;
+}
+.statistics-list {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    margin: auto;
+    gap: 0 1rem;
+}
+
+.statistics-list__single {
+    text-align: center;
+    margin: 1rem 0;
+    width: 30%;
+}
+
+.statistics-list__single > .number {
+    font-size: 2.5rem;
+    font-weight: 600;
+    color: var(--color-primary);
+}
+
+.statistics-list__single > p {
+    font-size: 1rem;
+    font-weight: 600;
+    text-transform: capitalize;
+    letter-spacing: 2px;
+}
+/* statistics */
